--- a/Site/views/build.haml
+++ b/Site/views/build.haml
@@ -7,7 +7,7 @@
   %p
     This page will generate a single JavaScript file, containing the chosen components.
   %hr
-  %form#packager{:method=>"post", :action=>"/build"}
+  %form#packager{:method=>"post", :action=>"/download"}
     .package{:id=>"package-G.UI"}
       %table
         %tr
