--- a/Themes/Blender/color.sass
+++ b/Themes/Blender/color.sass
@@ -8,9 +8,7 @@
     :-webkit-transition-duration 0
   :width 200px
   :min-width 85px
-  :margin 5px
-  :padding 10px
-  .pushgroup, .number
+  .blender-number, .blender-push-group
     :margin 5px 0
   .wrapper
     :position relative
