--- a/Site/views/docs.haml
+++ b/Site/views/docs.haml
@@ -2,7 +2,11 @@
 - if @class.demo != false
   .box#demo
     #demoleft
+      %h3
+        Demo
     #demoright
+      %h3
+        Attributes
     .clear
   :javascript
     window.addEvent('domready',function(){
@@ -15,7 +19,7 @@
           if(type == 'Select'){
             d = new Data.Select({editable:false})
             value.values.each(function(item){
-              d.addItem(new Iterable.ListItem({label:item}))
+              d.addItem(new Iterable.MenuListItem({label:item,icon:'/Themes/Chrome/images/add.png',shortcut:'CTRL-S'}))
             })
             d.addEvent('change',function(e,v){
               el.set(key,e);
