--- a/Themes/Blender/theme.sass
+++ b/Themes/Blender/theme.sass
@@ -2,7 +2,43 @@
 @import _rules.sass
 @import _buttons.sass
 @import _slider&number.sass
+@import color.sass
+@import _dialogs.sass
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:regular,bold,italic)
+
+.date-time
+  :width $width
+.time
+  :width $width
+.date
+  :width $width
+  
+.time, .date, .date-time
+  @extend .basic
+  :height 100px
+  :cursor pointer
+  .slot
+    @extend .nobasic
+    +round_full($borderRadius)
+    :float left
+
+.slot
+  @extend .basic
+  :height 100px
+  :width $width
+  .blender-list
+    .blender-list-item
+      :color $colorDark
+      :text-align center
+    @extend .nobasic
+    :-webkit-transition-duration 0.3s
+  .blender-list-selected
+    @extend .blue-gradient
+    :background-color $blue
+    :border
+      :top 1px solid $border
+      :bottom 1px solid $border
+    :color $colorLight !important
 
 .blender-checkbox
   :width $width
@@ -32,23 +68,45 @@
       :top -6px
       :left -2px
       :color $colorLight
+      
 .blender-icon
   @extend .basic
   @extend .light-on-dark
+  @extend .light-gradient
+  &:hover
+    @extend .lighter-gradient
+  &:active
+    @extend .darker-gradient
   :width $height
   :height $height
   :background-repeat no-repeat
   :background-position center center
   :cursor pointer
 
-.blender-list-item
+.blender-list-item, .blender-menu-list-item
+  :clear both
+  :height 20px
   :color $colorLight
   :font-size 12px
-  :padding 4px
+  :line-height 20px
   :cursor pointer 
+  .title
+    :margin-left 5px
   &:hover
     :background-color $blue
+    @extend .blue-gradient
     :color $colorDark
+.blender-menu-list-item  
+  .title
+    :margin-right 10px
+  .shortcut
+    :margin-right 5px
+
+.blender-menu-list-item-icon
+  :width 18px
+  :height 22px
+  :background-repeat no-repeat
+  :background-position center center
     
 .blender-list
   @extend .basic
@@ -58,16 +116,24 @@
   @extend .nobasic
 
 .blender-textarea
+  @extend .basic
+  @extend .light-igradient
+  :background-color $light
+  :color $colorDark
   textarea
-    @extend .basic
-    :background-color $light
-    :color $colorDark
     :padding 5px
+    :border none
+    :background-color transparent
     :-webkit-user-select auto
     :-webkit-background-clip padding-box
     :resize none
-  :width $width - 10px
+    :display block
+    :margin 0
+  :width $width 
   :min-width $minWidth
+
+.blender-overlay
+  :background-color rgba(0,0,0,0.3)
 
 .blender-push-group
   @extend .basic
@@ -135,6 +201,12 @@
 .blender-select
   @extend .basic
   @extend .dark-on-light
+  @extend .darker-gradient
+  &:hover
+    @extend .dark-gradient
+  &:active
+    @extend .darker-igradient
+    :color $colorLight
   :min-width 80px
   &:after
     :content ''
