Prefix, Theme changing.

--- a/Site/views/blender.sass
+++ b/Site/views/blender.sass
@@ -49,6 +49,9 @@ hr
     :margin-bottom 15px
 #demoright
   :float right
+  h3
+    :text-align right
+    :margin-right 5px
 p.inherited
   :color lighten(#3E4D5E,16%)
   .func
