--- a/Themes/Blender/_color.sass
+++ b/Themes/Blender/_color.sass
@@ -1,13 +1,6 @@
-@import ../Chrome/_mixins.sass
-.picker .color
-  .number, .pushgroup
-    +box_shadow(0,0,0,0)
 .color
-  :color #123457
-  .number
-    :-webkit-transition-duration 0
-  :width 200px
-  :min-width 85px
+  :width $width
+  :min-width $minWidth
   .blender-number, .blender-push-group
     :margin 5px 0
   .wrapper
